# bc-legal-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AUDIT.md  BC_Legal_AI_Production_Remediation_Plan_2026-07-22.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  P0_ENGINEERING_BACKLOG.md  PHASE_3_ROADMAP.md  PHASE_4_ROADMAP.md  PRODUCT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: README.md  evidence.py  supervisor_gate.py  verifier.py
apps/: README.md
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: lib.rs
architecture/: ALA_SYSTEM.md  AUDIT_P0_2026-07-21.md  EVIDENCE_MATRIX.md  MODULAR_MONOLITH.md  PHASE_3_4.md  PRIVILEGE.md  WINDOWS_CONNECTOR_BOUNDARY.md  audit_event.py  case_status.py  document_explainer.py  evidence_node.py  examination.py  graph_model.md  grounding.py  intake.py  legal_test.py  legal_test_lifecycle.py  petition.py  privilege_alerts.py  privilege_classifier_spec.md  privilege_schemas.py  query_api.py  schemas.py  section_topic.py  strength.py  timeline.py  workflow_stages.md
backend/: README.md
bc-legal-ai-conversational-platform/: FILE_MANIFEST.txt  setup-platform.ps1  setup-platform.sh
bc-legal-ai-conversational-platform/bc-legal-ai-conversational-platform/apps/desktop-mobile/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
bc-legal-ai-conversational-platform/bc-legal-ai-conversational-platform/apps/desktop-mobile/src-tauri/capabilities/: default.json
bc-legal-ai-conversational-platform/bc-legal-ai-conversational-platform/apps/desktop-mobile/src-tauri/src/: lib.rs  main.rs
checklists/: decision-review.md
config/: confidential_patterns.yml
docs/: AI_LEGAL_ASSISTANT_STUDIO_IMPLEMENTATION_ROADMAP.md  AI_LEGAL_ASSISTANT_STUDIO_PRD_SPEC.md  COMPREHENSIVE_SYSTEM_AUDIT_2026-07-23.md  CONVERSATIONAL_WORKSPACE_SPEC.md  DATA_MODEL_AND_EVIDENCE_SCHEMA.md  INSTALLABLE_CLIENT_STATUS.md  M0_001_inventory.md  M0_RELEASE_GATE.md  M1_PLATFORM_STATUS.md  PHASE_4_MASTER_ENGINEERING_PROGRAM.md  PLATFORM_AND_INSTALLATION.md  PRODUCTION_COMPLETION_ROADMAP_2026-07-23.md  PRODUCT_DESCRIPTION.md  PRODUCT_VISION_REPO_AUDIT.md  REPOSITORY_COMPLETION_AUDIT_2026-07-22.md  SECTION_G_PLATFORM_AND_DISTRIBUTION.md  SECTION_G_PROJECT_PLAN.md
evaluations/: README.md  run_eval_suite.py
frontend/: README.md
huggingface/: README.md
huggingface-space/: README.md  app.py  index.html  requirements.txt  style.css
infra/: docker-compose.yml
knowledgebase/: __init__.py  primary_sources.py  rtb_archive.py
legal_knowledge/: README.md  invalidated_tests.json
lexicon/: README.md  doctrines.md  glossary.md
middleware/: __init__.py  privilege_guard.py
model/: BASE_MODEL_DECISION.md  FINE_TUNING_DESIGNATION.md  README.md  data-pipeline.md
schema/: evidence_node.md
scripts/: build_windows_installer.ps1  create_github_labels.py  matter_demo.py  precommit_confidential_scan.py  publish-github.ps1  publish-huggingface.ps1  scan_confidential.py  validate-huggingface-assets.py  validate_deployment_readiness.py
services/: README.md  __init__.py
templates/: document-skeleton.md
tests/: test_api_phase3_4.py  test_audit_event.py  test_case_dashboard.py  test_citation_schema.py  test_contradiction_engine.py  test_conversation.py  test_deployment_readiness.py  (+28 more)
(+452 files in other folders)
