[package]
name = "bc_legal_ai_shell"
version = "0.1.0"
description = "BC Legal AI Associate — Tauri 2 shell (not a lawyer)"
authors = ["dmang69"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bc_legal_ai_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
