[package]
name = "bc-legal-ai-associate"
version = "0.1.0"
description = "BC Legal AI Associate cross-platform client"
authors = ["BC Legal AI Project"]
edition = "2021"

[lib]
name = "bc_legal_ai_associate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
